# sharc

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
bump/src/: boxed.rs  lib.rs  rc.rs
colored/: Cargo.toml  README.md
colored/src/: color.rs  customcolors.rs  error.rs  formatters.rs  lib.rs  style.rs
compile-warn/: Cargo.toml
compile-warn/src/: lib.rs
progress/src/: lib.rs
sharc/: Cargo.toml  build.rs
sharc-cli/: Cargo.toml
sharc-cli/logger/: Cargo.toml
sharc-cli/logger/src/: lib.rs  report.rs
sharc-cli/miri/: Cargo.toml  build.rs
sharc-cli/miri/src/: error.rs  ffi.rs  lib.rs  maybedrop.rs  sheep.rs  sys.rs  val.rs
sharc-cli/src/: args.rs  logger.rs  main.rs  motd.rs
sharc-cli/src/logger/: mod.rs
sharc/bump/: Cargo.toml
sharc/bump/src/: boxed.rs  lib.rs  rc.rs  ref.rs  sys.rs  vec.rs
sharc/src/: bigint.rs  lib.rs  report.rs  span.rs  weakref.rs
sharc/src/codegen/: llvm.rs
sharc/src/lexer/: mod.rs  token.rs
sharc/src/mirgen/: bytecode.rs  mir.rs  mod.rs
sharc/src/parser/: ast.rs  mod.rs
sharc/src/typeinf/: hir.rs  mod.rs  statics.rs
src/: bigint.rs  bump.rs  fs.rs  main.rs  motd.rs  report.rs
src/analyzer/: hir.rs  mir.rs  mod.rs
src/codegen/: llvm.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/typeinf/: hir.rs  mod.rs
