[package]
name        = "sharc"
version     = "0.1.0"
edition     = "2024"
description = "Compiler for the Shard Programming Language."
license     = "0BSD"
repository  = "https://github.com/shard-org/sharc"
keywords    = ["shard", "compiler", "language", "qbe"]
categories  = ["compiler", "development-tools"]

[dependencies]
colored  = { path = "colored"  }
progress = { path = "progress" }
bump     = { path = "bump"     }
# bumpalo = { version = "3.17", features = ["collections", "boxed"] } # eventually have our own??

[profile.release]
lto = "fat"
panic = "abort"
opt-level = "s"
debug = false
codegen-units = 1
