[workspace]
resolver = "3"
members = [
	"sharc",
	"sharc-cli",
	"bump",
	"colored",
]

[workspace.package]
version     = "0.1.0"
edition     = "2024"

repository  = "https://github.com/shard-org/sharc"
keywords    = ["shard", "compiler", "language", "qbe"]
categories  = ["compiler", "development-tools"]

description = "Compiler for the Shard Programming Language."
license     = "0BSD"

[workspace.dependencies]
bump = { path = "bump" }
colored = { path = "colored" }

[profile.release]
lto = "thin"
panic = "abort"
opt-level = "s"
