[workspace]
resolver = "3"
members = [
	"sharc",
	"sharc-cli",
	"colored",
]

[workspace.package]
version     = "0.1.0"
edition     = "2024"

repository  = "https://github.com/shard-org/sharc"
keywords    = ["shard", "compiler", "language", "qbe"]
categories  = ["compiler", "development-tools"]

description = "Compiler for the Shard Programming Language."
license     = "0BSD"

[workspace.dependencies]
colored = { path = "colored" }
sharc   = { path = "sharc" }

[profile.release]
lto = "thin"
panic = "abort"
opt-level = "s"
