[package]
name    = "sharc-cli"
version.workspace = true
edition.workspace = true

[dependencies]
colored.workspace = true
sharc.workspace   = true
miri              = { path = "miri" }
logger            = { path = "logger" }

[features]
backtrace = ["sharc/backtrace"]

[[bin]]
name = "sharc"
path = "src/main.rs"
